--- a/Harden System Security/Pages/Home.xaml
+++ b/Harden System Security/Pages/Home.xaml
@@ -14,6 +14,11 @@
     Unloaded="{x:Bind OnUnloadedDisposeResources}"
     Background="Transparent">
 
+    <Page.KeyboardAccelerators>
+        <KeyboardAccelerator Key="Left"  Invoked="{x:Bind OnLeftRightAcceleratorInvoked}"/>
+        <KeyboardAccelerator Key="Right" Invoked="{x:Bind OnLeftRightAcceleratorInvoked}"/>
+    </Page.KeyboardAccelerators>
+
     <Page.Resources>
 
         <!-- Stage panel background that stays readable in both Light and Dark themes -->
