--- a/AppControl Manager/Pages/CreatePolicy.xaml
+++ b/AppControl Manager/Pages/CreatePolicy.xaml
@@ -524,7 +524,8 @@
 
                         <Button IsEnabled="{x:Bind ViewModel.StrictKernelModeSectionIsEnabled, Mode=OneWay}"
                                 Click="{x:Bind ViewModel.StrictKernelModePolicyCreateButton_Click}"
-                                Style="{StaticResource AccentButtonStyle}" Margin="0,0,15,0" x:Uid="StrictKernelModePolicyCreateButton" />
+                                Style="{StaticResource AccentButtonStyle}" Margin="0,0,15,0"
+                                x:Uid="StrictKernelModePolicyCreateButton" />
 
                         <ToggleButton IsEnabled="{x:Bind ViewModel.StrictKernelModeSectionIsEnabled, Mode=OneWay}"
                                       IsChecked="{x:Bind ViewModel.StrictKernelModesCreateAndDeploy, Mode=TwoWay}"
@@ -614,6 +615,147 @@
                             <ToggleSwitch IsEnabled="{x:Bind ViewModel.RMMBlockingSectionIsEnabled, Mode=OneWay}"
                                           x:Uid="ToggleSwitchGeneral"
                                           IsOn="{x:Bind ViewModel.RMMBlockingAudit, Mode=TwoWay}" />
+                        </customUI:SettingsCardV2>
+
+                    </controls:SettingsExpander.Items>
+                </controls:SettingsExpander>
+
+                <!-- Downloads Defense Measure -->
+                <controls:SettingsExpander IsExpanded="{x:Bind ViewModel.DownloadsDefenseMeasureSettingsIsExpanded, Mode=TwoWay}"
+                           x:Uid="DownloadsDefenseMeasureSection"
+                           HeaderIcon="{ui:FontIcon Glyph=&#xEC9C;}">
+
+                    <controls:SettingsExpander.ItemsHeader>
+                        <customUI:InfoBarV2 x:Uid="CurrentStatusInfoBar"
+                                            BorderThickness="0"
+                                            CornerRadius="0"
+                                            IsIconVisible="True"
+                                            Message="{x:Bind ViewModel.DownloadsDefenseMeasureSettingsInfoBarMessage, Mode=OneWay}"
+                                            IsOpen="{x:Bind ViewModel.DownloadsDefenseMeasureSettingsInfoBarIsOpen, Mode=TwoWay}"
+                                            IsClosable="{x:Bind ViewModel.DownloadsDefenseMeasureSettingsInfoBarIsClosable, Mode=OneWay}"
+                                            Severity="{x:Bind ViewModel.DownloadsDefenseMeasureSettingsInfoBarSeverity, Mode=OneWay}">
+                            <customUI:InfoBarV2.ActionButton>
+                                <DropDownButton x:Uid="AdditionalActionsDropDownButton"
+                                                Visibility="{x:Bind ViewModel.DownloadsDefenseMeasureInfoBarActionButtonVisibility, Mode=OneWay}">
+                                    <DropDownButton.Content>
+                                        <StackPanel Orientation="Horizontal" Spacing="5">
+                                            <FontIcon Glyph="&#xE712;" Foreground="Chartreuse" />
+                                            <TextBlock x:Uid="AdditionalActionsTextBlock" />
+                                        </StackPanel>
+                                    </DropDownButton.Content>
+                                    <DropDownButton.Flyout>
+                                        <MenuFlyout Placement="Bottom">
+                                            <MenuFlyoutItem x:Uid="OpenInPolicyEditorMenuFlyoutItem"
+                                                            Icon="Edit"
+                                                            Click="{x:Bind ViewModel.OpenInPolicyEditor_DownloadsDefenseMeasurePolicy}"/>
+                                            <MenuFlyoutItem x:Uid="OpenTheFileMenuFlyoutItem"
+                                                            Icon="OpenWith"
+                                                            Click="{x:Bind ViewModel.OpenInDefaultFileHandler_DownloadsDefenseMeasurePolicy}"/>
+                                            <MenuFlyoutItem x:Uid="OpenInConfigurePolicyRuleOptionsMenuFlyoutItem"
+                                                            Click="{x:Bind ViewModel.OpenInConfigurePolicyRuleOptions_DownloadsDefenseMeasurePolicy}">
+                                                <MenuFlyoutItem.Icon>
+                                                    <FontIcon Glyph="&#xEEA3;" />
+                                                </MenuFlyoutItem.Icon>
+                                            </MenuFlyoutItem>
+                                        </MenuFlyout>
+                                    </DropDownButton.Flyout>
+                                </DropDownButton>
+                            </customUI:InfoBarV2.ActionButton>
+                        </customUI:InfoBarV2>
+                    </controls:SettingsExpander.ItemsHeader>
+
+                    <controls:WrapPanel Orientation="Horizontal" HorizontalSpacing="6" VerticalSpacing="10">
+
+                        <Button IsEnabled="{x:Bind ViewModel.DownloadsDefenseMeasureSectionIsEnabled, Mode=OneWay}"
+                                Click="{x:Bind ViewModel.DownloadsDefenseMeasurePolicyCreateButton_Click}"
+                                Style="{StaticResource AccentButtonStyle}"
+                                Margin="0,0,15,0"
+                                x:Uid="DownloadsDefenseMeasureCreateButton" />
+
+                        <ToggleButton IsEnabled="{x:Bind ViewModel.DownloadsDefenseMeasureSectionIsEnabled, Mode=OneWay}"
+                                      IsChecked="{x:Bind ViewModel.DownloadsDefenseMeasureCreateAndDeploy, Mode=TwoWay}"
+                                      x:Uid="DeployAfterCreationButton"
+                                      Margin="0,0,15,0" />
+
+                    </controls:WrapPanel>
+
+                    <controls:SettingsExpander.Items>
+
+                        <customUI:SettingsCardV2 x:Uid="AuditRuleOptionSettingsCard">
+                            <ToggleSwitch IsEnabled="{x:Bind ViewModel.DownloadsDefenseMeasureSectionIsEnabled, Mode=OneWay}"
+                                          x:Uid="ToggleSwitchGeneral"
+                                          IsOn="{x:Bind ViewModel.DownloadsDefenseMeasureAudit, Mode=TwoWay}" />
+                        </customUI:SettingsCardV2>
+
+                    </controls:SettingsExpander.Items>
+                </controls:SettingsExpander>
+
+
+                <!-- Dangerous Script Hosts Blocking -->
+                <controls:SettingsExpander IsExpanded="{x:Bind ViewModel.DangerousScriptHostsBlockingSettingsIsExpanded, Mode=TwoWay}"
+                                           x:Uid="DangerousScriptHostsBlockingSection"
+                                           HeaderIcon="{ui:FontIcon Glyph=&#xEA44;}">
+
+                    <controls:SettingsExpander.ItemsHeader>
+                        <customUI:InfoBarV2 x:Uid="CurrentStatusInfoBar"
+                                            BorderThickness="0"
+                                            CornerRadius="0"
+                                            IsIconVisible="True"
+                                            Message="{x:Bind ViewModel.DangerousScriptHostsBlockingSettingsInfoBarMessage, Mode=OneWay}"
+                                            IsOpen="{x:Bind ViewModel.DangerousScriptHostsBlockingSettingsInfoBarIsOpen, Mode=TwoWay}"
+                                            IsClosable="{x:Bind ViewModel.DangerousScriptHostsBlockingSettingsInfoBarIsClosable, Mode=OneWay}"
+                                            Severity="{x:Bind ViewModel.DangerousScriptHostsBlockingSettingsInfoBarSeverity, Mode=OneWay}">
+                            <customUI:InfoBarV2.ActionButton>
+                                <DropDownButton x:Uid="AdditionalActionsDropDownButton"
+                                                Visibility="{x:Bind ViewModel.DangerousScriptHostsBlockingInfoBarActionButtonVisibility, Mode=OneWay}">
+                                    <DropDownButton.Content>
+                                        <StackPanel Orientation="Horizontal" Spacing="5">
+                                            <FontIcon Glyph="&#xE712;" Foreground="Chartreuse" />
+                                            <TextBlock x:Uid="AdditionalActionsTextBlock" />
+                                        </StackPanel>
+                                    </DropDownButton.Content>
+                                    <DropDownButton.Flyout>
+                                        <MenuFlyout Placement="Bottom">
+                                            <MenuFlyoutItem x:Uid="OpenInPolicyEditorMenuFlyoutItem"
+                                                            Icon="Edit"
+                                                            Click="{x:Bind ViewModel.OpenInPolicyEditor_DangerousScriptHostsBlockingPolicy}"/>
+                                            <MenuFlyoutItem x:Uid="OpenTheFileMenuFlyoutItem"
+                                                            Icon="OpenWith"
+                                                            Click="{x:Bind ViewModel.OpenInDefaultFileHandler_DangerousScriptHostsBlockingPolicy}"/>
+                                            <MenuFlyoutItem x:Uid="OpenInConfigurePolicyRuleOptionsMenuFlyoutItem"
+                                                            Click="{x:Bind ViewModel.OpenInConfigurePolicyRuleOptions_DangerousScriptHostsBlockingPolicy}">
+                                                <MenuFlyoutItem.Icon>
+                                                    <FontIcon Glyph="&#xEEA3;" />
+                                                </MenuFlyoutItem.Icon>
+                                            </MenuFlyoutItem>
+                                        </MenuFlyout>
+                                    </DropDownButton.Flyout>
+                                </DropDownButton>
+                            </customUI:InfoBarV2.ActionButton>
+                        </customUI:InfoBarV2>
+                    </controls:SettingsExpander.ItemsHeader>
+
+                    <controls:WrapPanel Orientation="Horizontal" HorizontalSpacing="6" VerticalSpacing="10">
+
+                        <Button IsEnabled="{x:Bind ViewModel.DangerousScriptHostsBlockingSectionIsEnabled, Mode=OneWay}"
+                                Click="{x:Bind ViewModel.DangerousScriptHostsBlockingPolicyCreateButton_Click}"
+                                Style="{StaticResource AccentButtonStyle}"
+                                Margin="0,0,15,0"
+                                x:Uid="DangerousScriptHostsBlockingCreateButton" />
+
+                        <ToggleButton IsEnabled="{x:Bind ViewModel.DangerousScriptHostsBlockingSectionIsEnabled, Mode=OneWay}"
+                                      IsChecked="{x:Bind ViewModel.DangerousScriptHostsBlockingCreateAndDeploy, Mode=TwoWay}"
+                                      x:Uid="DeployAfterCreationButton"
+                                      Margin="0,0,15,0" />
+
+                    </controls:WrapPanel>
+
+                    <controls:SettingsExpander.Items>
+
+                        <customUI:SettingsCardV2 x:Uid="AuditRuleOptionSettingsCard">
+                            <ToggleSwitch IsEnabled="{x:Bind ViewModel.DangerousScriptHostsBlockingSectionIsEnabled, Mode=OneWay}"
+                                          x:Uid="ToggleSwitchGeneral"
+                                          IsOn="{x:Bind ViewModel.DangerousScriptHostsBlockingAudit, Mode=TwoWay}" />
                         </customUI:SettingsCardV2>
 
                     </controls:SettingsExpander.Items>
