--- a/AppControl Manager/Pages/SystemInformation/ViewCurrentPolicies.xaml
+++ b/AppControl Manager/Pages/SystemInformation/ViewCurrentPolicies.xaml
@@ -137,6 +137,19 @@
                          TextChanged="{x:Bind ViewModel.SearchBox_TextChanged}"
                          VerticalAlignment="Center" />
 
+                <Button Click="{x:Bind ViewModel.OpenSelectedPolicyInPolicyEditor}"
+                        IsEnabled="{x:Bind ViewModel.UIElementsEnabledState, Mode=OneWay}"
+                        x:Uid="OpenInPolicyEditorButton">
+                    <Button.ContentTemplate>
+                        <DataTemplate x:DataType="x:String">
+                            <StackPanel Orientation="Horizontal" Spacing="8">
+                                <FontIcon Glyph="&#xE70F;" FontSize="16"/>
+                                <TextBlock Text="{x:Bind}"/>
+                            </StackPanel>
+                        </DataTemplate>
+                    </Button.ContentTemplate>
+                </Button>
+
             </controls:WrapPanel>
 
         </Border>
