--- a/Harden System Security/MainWindow.xaml
+++ b/Harden System Security/MainWindow.xaml
@@ -415,6 +415,21 @@
                                                  BorderBrush="{ThemeResource CardStrokeColorDefaultBrush}"
                                                  BorderThickness="1"/>
 
+                                <Button HorizontalAlignment="Center"
+                                        VerticalAlignment="Bottom"
+                                        x:Uid="OptimizeMemoryButton"
+                                        IsEnabled="{x:Bind ViewModel.OptimizeMemoryButtonIsEnabled, Mode=OneWay}"                                        
+                                        Click="{x:Bind ViewModel.OptimizeMemory}">
+                                    <Button.ContentTemplate>
+                                        <DataTemplate x:DataType="x:String">
+                                            <StackPanel Orientation="Horizontal" Spacing="8">
+                                                <FontIcon Glyph="&#xEEA0;" FontFamily="Segoe Fluent Icons" FontSize="16"/>
+                                                <TextBlock Text="{x:Bind}"/>
+                                            </StackPanel>
+                                        </DataTemplate>
+                                    </Button.ContentTemplate>
+                                </Button>
+
                             </controls:WrapPanel>
 
                         </ScrollViewer>
