--- a/Harden System Security/Pages/Protects/MicrosoftDefender.xaml
+++ b/Harden System Security/Pages/Protects/MicrosoftDefender.xaml
@@ -5,7 +5,9 @@
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:controls="using:CommunityToolkit.WinUI.Controls"
     xmlns:ui="using:CommunityToolkit.WinUI"
+    xmlns:win="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:customUI="using:AppControlManager.CustomUIElements"
+    xmlns:helpers="using:HardenSystemSecurity.Helpers"
     FlowDirection="{x:Bind ViewModel.AppSettings.ApplicationGlobalFlowDirection, Mode=OneWay}">
 
     <Grid>
@@ -29,9 +31,222 @@
                             Severity="{x:Bind ViewModel.MainInfoBarSeverity, Mode=OneWay}"
                             IsClosable="{x:Bind ViewModel.MainInfoBarIsClosable, Mode=OneWay}" />
 
-        <customUI:MUnitListViewControl Grid.Row="2"
-                       ViewModel="{x:Bind ViewModel}"
-                       ListViewItemsSource="{x:Bind ViewModel.ListViewItemsSource, Mode=OneWay}"/>
+        <TabView VerticalAlignment="Stretch"
+                 IsAddTabButtonVisible="False"
+                 Grid.Row="2"
+                 TabWidthMode="Equal"
+                 CanReorderTabs="{x:Bind ViewModel.IsNotElevated}">
+
+            <!-- Security Measures Tab -->
+            <TabViewItem x:Uid="MicrosoftDefenderSecurityMeasuresTab" IsClosable="False" MinHeight="40">
+                <TabViewItem.IconSource>
+                    <BitmapIconSource UriSource="/Assets/External/SecurityMeasures.png" ShowAsMonochrome="False" />
+                </TabViewItem.IconSource>
+                <TabViewItem.Content>
+                    <Grid>
+                        <win:Grid.ChildrenTransitions>
+                            <win:EntranceThemeTransition FromVerticalOffset="50" />
+                            <win:RepositionThemeTransition IsStaggeringEnabled="False" />
+                        </win:Grid.ChildrenTransitions>
+
+                        <customUI:MUnitListViewControl
+                        x:Name="SecurityMeasuresList"
+                        ViewModel="{x:Bind ViewModel}"
+                        DisposeOnlyOnExplicitCall="True"
+                        ChildButtonsDisposeOnlyOnExplicitCall="True"
+                        ListViewItemsSource="{x:Bind ViewModel.ListViewItemsSource, Mode=OneWay}"/>
+
+                    </Grid>
+                </TabViewItem.Content>
+            </TabViewItem>
+
+            <!-- Exclusion -->
+            <TabViewItem x:Uid="ExclusionMSDefenderTab" IsClosable="False" MinHeight="40">
+                <TabViewItem.IconSource>
+                    <BitmapIconSource UriSource="/Assets/External/Exclude.png" ShowAsMonochrome="False" />
+                </TabViewItem.IconSource>
+                <TabViewItem.Content>
+                    <Grid>
+                        <win:Grid.ChildrenTransitions>
+                            <win:EntranceThemeTransition FromVerticalOffset="50" />
+                            <win:RepositionThemeTransition IsStaggeringEnabled="False" />
+                        </win:Grid.ChildrenTransitions>
+
+                        <Grid.RowDefinitions>
+                            <RowDefinition Height="Auto"/>
+                            <RowDefinition Height="*"/>
+                        </Grid.RowDefinitions>
+
+                        <Border Margin="0,10,0,10"
+                                Grid.Row="0"
+                                Style="{StaticResource GridCardStyle}" Padding="8">
+                            <controls:WrapPanel Orientation="Horizontal" HorizontalAlignment="Center"
+                                     VerticalAlignment="Center"
+                                     HorizontalSpacing="10"
+                                     VerticalSpacing="10">
+
+                                <DropDownButton x:Uid="AddExclusionsButton"
+                                        VerticalAlignment="Center"
+                                        IsEnabled="{x:Bind ViewModel.ExclusionsUIIsEnabled}">
+                                    <DropDownButton.ContentTemplate>
+                                        <DataTemplate x:DataType="x:String">
+                                            <StackPanel Orientation="Horizontal" Spacing="8">
+                                                <FontIcon Glyph="&#xE710;" FontSize="16"/>
+                                                <TextBlock Text="{x:Bind}"/>
+                                            </StackPanel>
+                                        </DataTemplate>
+                                    </DropDownButton.ContentTemplate>
+
+                                    <DropDownButton.Flyout>
+                                        <MenuFlyout Placement="Bottom">
+
+                                            <MenuFlyout.SystemBackdrop>
+                                                <MicaBackdrop Kind="BaseAlt"/>
+                                            </MenuFlyout.SystemBackdrop>
+
+                                            <MenuFlyoutItem x:Uid="AddExclusionsForFilePathMenuFlyoutItem" Click="{x:Bind ViewModel.AddFilePathExclusion}"/>
+                                            <MenuFlyoutItem x:Uid="AddExclusionsForFolderPathMenuFlyoutItem" Click="{x:Bind ViewModel.AddFolderPathExclusion}"/>
+                                            <MenuFlyoutItem x:Uid="AddExclusionsForExtensionMenuFlyoutItem" Click="{x:Bind ViewModel.AddExtensionExclusion}" />
+                                            <MenuFlyoutItem x:Uid="AddExclusionsForProcessMenuFlyoutItem" Click="{x:Bind ViewModel.AddProcessExclusion}" />
+                                            <MenuFlyoutItem x:Uid="AddExclusionsForCFAMenuFlyoutItem" Click="{x:Bind ViewModel.AddControlledFolderAccessExclusion}" />
+                                            <MenuFlyoutItem x:Uid="AddExclusionsForASRMenuFlyoutItem" Click="{x:Bind ViewModel.AddASRExclusion}" />
+
+                                        </MenuFlyout>
+                                    </DropDownButton.Flyout>
+
+                                </DropDownButton>
+
+                                <Button x:Uid="RetrieveAllExclusionsButton"
+                                        IsEnabled="{x:Bind ViewModel.ExclusionsUIIsEnabled}"
+                                        Click="{x:Bind ViewModel.RetrieveAllExclusions}"
+                                        VerticalAlignment="Center">
+                                    <Button.ContentTemplate>
+                                        <DataTemplate x:DataType="x:String">
+                                            <StackPanel Orientation="Horizontal" Spacing="8">
+                                                <FontIcon Glyph="&#xE9F5;" FontSize="16"/>
+                                                <TextBlock Text="{x:Bind}"/>
+                                            </StackPanel>
+                                        </DataTemplate>
+                                    </Button.ContentTemplate>
+                                </Button>
+
+                                <Button x:Uid="ClearDataButton"
+                                        VerticalAlignment="Center"
+                                        IsEnabled="{x:Bind ViewModel.ExclusionsUIIsEnabled}"
+                                        Click="{x:Bind ViewModel.ClearExclusionsList}">
+                                    <Button.ContentTemplate>
+                                        <DataTemplate x:DataType="x:String">
+                                            <StackPanel Orientation="Horizontal" Spacing="8">
+                                                <FontIcon Glyph="&#xE74D;" FontSize="16"/>
+                                                <TextBlock Text="{x:Bind}"/>
+                                            </StackPanel>
+                                        </DataTemplate>
+                                    </Button.ContentTemplate>
+                                </Button>
+
+                                <TextBox x:Uid="SearchBoxTextBox"
+                                         VerticalAlignment="Center"
+                                         IsEnabled="{x:Bind ViewModel.ExclusionsUIIsEnabled, Mode=OneWay}"
+                                         Text="{x:Bind ViewModel.ExclusionsSearchText, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"/>
+
+                                <!-- Total chip -->
+                                <Border CornerRadius="8"
+                                        VerticalAlignment="Center"
+                                        HorizontalAlignment="Center"
+                                        Padding="10,6"
+                                        BorderThickness="1"
+                                        BorderBrush="{ThemeResource CardStrokeColorDefaultBrush}"
+                                        Background="{ThemeResource CardBackgroundFillColorDefaultBrush}">
+                                    <StackPanel Orientation="Horizontal" Spacing="6" VerticalAlignment="Center">
+                                        <FontIcon Glyph="&#xE8A9;" Foreground="{ThemeResource AccentTextFillColorPrimaryBrush}" />
+                                        <TextBlock VerticalAlignment="Center">
+                                            <Run x:Uid="TotalText" />
+                                            <Run Text="{x:Bind ViewModel.Exclusions.Count, Mode=OneWay}" FontWeight="SemiBold" />
+                                        </TextBlock>
+                                    </StackPanel>
+
+                                </Border>
+
+                            </controls:WrapPanel>
+
+                        </Border>
+
+                        <customUI:ListViewV2
+                            Grid.Row="1"
+                            RegistryKey="MD_Exclusions"
+                            IsEnabled="{x:Bind ViewModel.ExclusionsUIIsEnabled, Mode=OneWay}"
+                            ItemsSource="{x:Bind ViewModel.Exclusions}"
+                            SelectionMode="Single">
+
+                            <customUI:ListViewV2.Header>
+                                <Border CornerRadius="5" Background="Black" customUI:StickyHeaderBehaviorV2.IsEnabled="True">
+                                    <Grid>
+                                        <Grid.ColumnDefinitions>
+                                            <ColumnDefinition Width="{x:Bind ViewModel.EXColWidth1, Mode=TwoWay}" MinWidth="50"/>
+                                            <ColumnDefinition Width="{x:Bind ViewModel.EXColWidth2, Mode=TwoWay}" MinWidth="50"/>
+                                        </Grid.ColumnDefinitions>
+                                        <Button x:Uid="TargetColumnHeaderBtn" Tag="Target" Grid.Column="0" Margin="10,0,0,0" Style="{StaticResource ListViewHeaderButton}" Click="{x:Bind ViewModel.HeaderColumnSortingButton_Click}" />
+                                        <Button x:Uid="SourceColumnHeaderBtn" Tag="Source" Grid.Column="1" Style="{StaticResource ListViewHeaderButton}" Click="{x:Bind ViewModel.HeaderColumnSortingButton_Click}" />
+                                        <controls:GridSplitter Grid.Column="1"/>
+                                    </Grid>
+                                </Border>
+                            </customUI:ListViewV2.Header>
+
+                            <customUI:ListViewV2.ItemTemplate>
+                                <DataTemplate x:DataType="helpers:Exclusions" xmlns:VMs="using:HardenSystemSecurity.ViewModels">
+                                    <Grid Background="Transparent">
+
+                                        <Grid.ContextFlyout>
+                                            <MenuFlyout>
+                                                <MenuFlyoutItem x:Uid="CopyRow"
+                                                                Click="{x:Bind VMs:ViewModelProvider.MicrosoftDefenderVM.CopySelectedExclusions_Click}" >
+                                                    <MenuFlyoutItem.Icon>
+                                                        <FontIcon Glyph="&#xE8C8;"/>
+                                                    </MenuFlyoutItem.Icon>
+                                                </MenuFlyoutItem>
+
+                                                <MenuFlyoutSubItem x:Uid="CopyIndividualItems">
+                                                    <MenuFlyoutSubItem.Icon>
+                                                        <FontIcon Glyph="&#xE8C8;"/>
+                                                    </MenuFlyoutSubItem.Icon>
+                                                    <MenuFlyoutSubItem.Items>
+                                                        <MenuFlyoutItem x:Uid="TargetHeader" Tag="Target" Click="{x:Bind VMs:ViewModelProvider.MicrosoftDefenderVM.CopyExclusionProperty_Click}"/>
+                                                        <MenuFlyoutItem x:Uid="SourceHeader" Tag="Source" Click="{x:Bind VMs:ViewModelProvider.MicrosoftDefenderVM.CopyExclusionProperty_Click}"/>
+                                                    </MenuFlyoutSubItem.Items>
+                                                </MenuFlyoutSubItem>
+
+                                                <MenuFlyoutSeparator/>
+
+                                                <!-- Remove the specific exclusion item (Tag bound to the current item) -->
+                                                <MenuFlyoutItem x:Uid="RemoveText"
+                                                                Tag="{x:Bind}"
+                                                                Click="{x:Bind VMs:ViewModelProvider.MicrosoftDefenderVM.RemoveExclusion_Click}">
+                                                    <MenuFlyoutItem.Icon>
+                                                        <FontIcon Glyph="&#xE74D;"/>
+                                                    </MenuFlyoutItem.Icon>
+                                                </MenuFlyoutItem>
+
+                                            </MenuFlyout>
+                                        </Grid.ContextFlyout>
+
+                                        <Grid.ColumnDefinitions>
+                                            <ColumnDefinition Width="{x:Bind VMs:ViewModelProvider.MicrosoftDefenderVM.EXColWidth1, Mode=OneWay}"/>
+                                            <ColumnDefinition Width="{x:Bind VMs:ViewModelProvider.MicrosoftDefenderVM.EXColWidth2, Mode=OneWay}"/>
+                                        </Grid.ColumnDefinitions>
+                                        <TextBlock Text="{x:Bind Target}" Style="{StaticResource ListViewCellTextBlock}" Grid.Column="0"/>
+                                        <TextBlock Text="{x:Bind SourceFriendlyName}" Style="{StaticResource ListViewCellTextBlock}" Grid.Column="1"/>
+                                    </Grid>
+                                </DataTemplate>
+                            </customUI:ListViewV2.ItemTemplate>
+                        </customUI:ListViewV2>
+
+                    </Grid>
+
+                </TabViewItem.Content>
+
+            </TabViewItem>
+
+        </TabView>
 
     </Grid>
 </Page>
