--- a/Harden System Security/CustomUIElements/MUnitListViewControl.xaml
+++ b/Harden System Security/CustomUIElements/MUnitListViewControl.xaml
@@ -117,6 +117,13 @@
                                        VerticalAlignment="Center"
                                        Visibility="{x:Bind HasURL, Mode=OneWay}"/>
 
+                            <!-- Intent circles (auto-collapses when none) -->
+                            <customUI:IntentCircles Grid.Column="1"
+                                                    HorizontalAlignment="Left"
+                                                    VerticalAlignment="Center"
+                                                    Margin="12,0,0,0"
+                                                    ItemsSource="{x:Bind DeviceIntents}"/>
+
                             <!-- Action Buttons on the right -->
                             <StackPanel Grid.Column="2"
                                         Orientation="Horizontal"
